--- a/views/word_count.html.twig
+++ b/views/word_count.html.twig
@@ -1,17 +1,20 @@
 <html>
     <head>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+        <link rel='stylesheet' href="css/styles.css" type="text/css" media="all">
         <title>Word Counter</title>
     </head>
-    <body>
+    <body background="http://diariodoturismo.com.br/wp-content/uploads/2015/04/word-words-words.jpg">
         <div class='container'>
-            <h1>Lets Count Some Words</h1>
+            <h1>Lets Count Some </h1>
             <form action='/results'>
                 <div class='form-group'>
-                    <label for='word'>Enter the word you want to look for:</label>
-                    <input id='word' name='word'class='form-control' type='text'>
-                    <label for='phrase'>Enter the phrase you want to search:</label>
-                    <input id-'phrase' name='phrase' class='form-control' type='text'>
+                    <h2><label for='word'>Enter the word you want to look for:</label>
+                    <input id='word' name='word'class='form-control' type='text'></h2>
+                    <br/>
+                    <br/>
+                    <h2><label for='phrase'>Enter the phrase you want to search:</label>
+                    <input id-'phrase' name='phrase' class='form-control' type='text'></h2>
                 </div>
                 <button type='submit'>Search</button>
             </form>
